avatars and review spacing fixed.

--- a/client/styles/allReviews.module.css
+++ b/client/styles/allReviews.module.css
@@ -41,9 +41,5 @@
   font-weight: 400;
   line-height: 24px;
   color: #222222;
-}
-img {
-  height: 25%;
-  width: 25%;
-  min-height: 1px;
+  padding-bottom: 20px;
 }
