--- a/client/styles/app.module.css
+++ b/client/styles/app.module.css
@@ -25,7 +25,7 @@ button:hover {
 }
 /* Padding for parent div on whole page */
 .reviewSection {
-  padding: 48px 80px 48px 80px;
+  padding: 48px 120px 48px 120px;
 }
 /* entire section wrapper */
 .wrapper {
@@ -36,6 +36,7 @@ button:hover {
 /* latest reviews */
 .reviews {
   grid-column: 1 / 3;
+  padding-top: 10px;
   padding-bottom: 48px;
 }
 /* showAll button */
