--- a/client/styles/latestReviews.module.css
+++ b/client/styles/latestReviews.module.css
@@ -5,8 +5,8 @@
 }
 .reviewWrapper {
   display: grid;
-  grid-auto-columns: repeat(5, minmax(56px, auto));
-  grid-auto-rows: repeat(2, minmax(56px, auto));
+  grid-template-columns: 56px 1fr;
+  grid-template-rows: 56px auto;
 }
 /* review data */
 .avatar {
@@ -34,11 +34,14 @@
   font-weight: 400;
   line-height: 24px;
   color: #222222;
+  padding-top: 10px;
+  padding-bottom: 20px;
+  margin-right: 96px;
 }
 img {
-  max-height: 56px;
-  max-width: 56px;
-  min-height: 1px;
+  height: 56px;
+  width: 56px;
+  min-height: 56px;
   /* display: block;
   margin-left: auto;
   margin-right: auto; */
